results/SVCOMP/specgen/log-ExSymExeSwitch-2024_03_07_04_05_53.txt
class Main {

  //@ requires x > 0 ==> \result == true;
  //@ requires x <= 0 ==> \result == test(x);
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  /* we want to let the user specify that this method should be symbolic */

  //@ ensures (\result ==> x == 2 && \result == false) || (x == 3000 && \result == false) || (x != 2 && x != 3000 && \result == true);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:3: error: A \result expression may not be in a requires clause
  //@ requires x > 0 ==> \result == true;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> \result == test(x);
                           ^
2 errors

class Main {

  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> test(x);
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  /* we want to let the user specify that this method should be symbolic */

  //@ ensures (\result ==> x == 2 && \result == false) || (x == 3000 && \result == false) || (x != 2 && x != 3000 && \result == true);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
